@@ -6,6 +6,7 @@ Retrotranslator Changelog
   - New -uptodatecheck option to skip translation of files if the destination files are newer.
   - Support for java.lang.StackTraceElement(String, String, String, int).
   - New option -support to selectively enable advanced features.
+  - Limited support for java.lang.Thread.UncaughtExceptionHandler.
 
 1.2.1 (2007-02-01)
 ---------------------------------
